# Cosmos-on-the-rocks

./: .cursorrules  .gitignore  CODEFLOW.md  Cargo.toml  README.md  justfile  workflow.md  workflow2.md
.cargo/: config.toml
assets/dialogue/: A.yarn  hello_world.yarn  on_the_rocks.yarn  start.yarn  zara.yarn
assets/dialogues/: zara.dialogue.ron
src/: constants.rs  lib.rs  main.rs
src/animation/: mod.rs  sprite_animation.rs
src/bar/: bar_counter.rs  crafting.rs  drinks.rs  glass.rs  ingredient.rs  ingredients_extra.rs  mod.rs
src/customers/: customer_sprites.rs  dialogue.rs  mod.rs
src/dialogue/: intel.rs  mod.rs  nodes.rs  patrons.rs  systems.rs
src/dialogues/: mod.rs
src/engine/: asset_loader.rs  audio_controller.rs  game_runner.rs  mod.rs
src/ingredients/: animated_ingredients.rs  mod.rs  static_ingredients.rs
src/ui/: crafting_menu.rs  crafting_ui.rs  emotion_ui.rs  ingredient_tooltip.rs  main_menu.rs  mod.rs  mood_ui.rs
web/: cosmos-on-the-rocks.d.ts  cosmos-on-the-rocks.js  cosmos-on-the-rocks_bg.wasm.d.ts  index.html
