[package]
name = "cosmos-on-the-rocks"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy_asset_loader = "0.23.0"
#bevy_enhanced_input = "0.12.0"
bevy_seedling = "0.4.1"
bevy_yarnspinner = "0.5.0"
bevy_yarnspinner_example_dialogue_view = "0.5.0"
serde = { version = "1.0.197", features = ["derive"] }
ron = "0.8.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
